tests/data/arff/invalid/dense_missing_value.arff
% Title
% comments
@RELATION name

@ATTRIBUTE first    NUMERIC
@ATTRIBUTE second   numeric
@ATTRIBUTE third    Numeric
@ATTRIBUTE fourth   NUMERIC
@ATTRIBUTE class    {0,1}

@DATA
-1.117827500607882,-2.9087188881250993,0.66638344270039144,1.0978832703949288,1
-0.5282118298909262,-0.335880984968183973,0.51687296029754564
0.0,0.60276937379453293,-0.13086851759108944,0.0,0
0.57650218263054642,1.01405596624706053,0.13009428079760464,0.7261913886869387,0
1.88494043717792,1.00518564317278263,0.298499933047586044,1.6464627048813514,0